--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "nodemailer": "~0.5.2",
     "backbone": "~1.0.0",
     "mongosync": "~1.1.3",
-    "express": "~3.3.5"
+    "express": "~3.3.5",
+    "q": "~0.9.6",
+    "moment": "~2.1.0",
+    "handlebars": "~1.0.12",
+    "cheerio": "~0.12.1",
+    "xtend": "~2.0.6"
   }
 }
